--- a/StudyWithTimer/app/src/main/res/layout/timer_list_item.xml
+++ b/StudyWithTimer/app/src/main/res/layout/timer_list_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="20dp"
@@ -37,6 +38,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="총 공부 시간"
                 app:layout_constraintBottom_toTopOf="@+id/elapsed_time_text"
                 app:layout_constraintEnd_toStartOf="@+id/textView6"
@@ -47,7 +49,8 @@
             <TextView
                 android:id="@+id/elapsed_time_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginBottom="20dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/start_time_text"
@@ -59,6 +62,7 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="시작 시간"
                 app:layout_constraintBottom_toTopOf="@+id/start_time_text"
                 app:layout_constraintEnd_toStartOf="@+id/textView8"
@@ -69,7 +73,8 @@
             <TextView
                 android:id="@+id/start_time_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginBottom="20dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/end_time_text"
@@ -81,6 +86,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="종료 시간"
                 app:layout_constraintBottom_toTopOf="@+id/end_time_text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,13 +97,25 @@
             <TextView
                 android:id="@+id/end_time_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="19dp"
+                android:layout_marginBottom="20dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/start_time_text"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_clear_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
