--- a/StudyWithTimer/app/src/main/res/layout/fragment_confirm_dialog.xml
+++ b/StudyWithTimer/app/src/main/res/layout/fragment_confirm_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ConfirmDialog">
+    tools:context=".dialog.ConfirmDialog">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
