--- a/StudyWithTimer/app/src/main/res/layout/activity_write.xml
+++ b/StudyWithTimer/app/src/main/res/layout/activity_write.xml
@@ -30,14 +30,17 @@
 
     <EditText
         android:id="@+id/todo_editText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="@android:color/transparent"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/back_button"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
