--- a/StudyWithTimer/app/src/main/res/layout/activity_write.xml
+++ b/StudyWithTimer/app/src/main/res/layout/activity_write.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8FAFF"
+    android:backgroundTint="#F0F5FA"
     tools:context=".WriteActivity">
 
     <ImageButton
@@ -35,8 +37,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:textSize="16sp"
         android:backgroundTint="@android:color/transparent"
         android:inputType="textMultiLine"
+        android:fontFamily="@font/agul2"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
