--- a/Tinder/app/src/main/res/layout/activity_login.xml
+++ b/Tinder/app/src/main/res/layout/activity_login.xml
@@ -43,5 +43,15 @@
         app:layout_constraintTop_toBottomOf="@id/passwordEditText"
         android:layout_marginRight="4dp"
         app:layout_constraintEnd_toStartOf="@id/loginButton"/>
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/facebookLoginButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
