--- a/carrotMarket/app/src/main/res/layout/activity_article_add.xml
+++ b/carrotMarket/app/src/main/res/layout/activity_article_add.xml
@@ -63,6 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:hint="가격"
         app:layout_constraintEnd_toEndOf="parent"
