use google map api

--- a/NotificationFinder/app/src/main/res/values/api_key.xml
+++ b/NotificationFinder/app/src/main/res/values/api_key.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name = "tmap_api_key">l7xxf4571ce22cf54b44b123f54fc3276b8f</string>
+    <string name = "google_map_api">AIzaSyDiU8v6iX0N-VaAL26QwLEHO-m4-qPgomc</string>
 </resources>
